--- a/DexMasterUI/Components/Layout/VersionPickerV2.razor
+++ b/DexMasterUI/Components/Layout/VersionPickerV2.razor
@@ -1,7 +1,4 @@
-﻿@using Version = PokeApiNet.Version
-<link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
-
-<MudGrid Justify="Justify.SpaceEvenly">
+﻿<MudGrid Justify="Justify.SpaceEvenly">
     <MudItem lg="3">
         <MudSelect T="Generation"
                    Value="_selectedGeneration"
@@ -55,7 +52,7 @@
     </MudItem>
     <MudItem lg="1">
         <MudIconButton OnClick="NationalDexSelected" 
-                       Icon="fas fa-globe-europe" 
+                       Icon="Icons.Earth" 
                        Variant="Variant.Filled" 
                        Color="Color.Primary" 
                        Size="Size.Large" />
