--- a/DexMasterUI/Components/Display/PokemonCard.razor
+++ b/DexMasterUI/Components/Display/PokemonCard.razor
@@ -56,6 +56,8 @@
 
     [CascadingParameter] 
     public User LoggedInUser { get; set; }
+    [CascadingParameter] 
+    public string VersionName { get; set; }
     
     private bool _open;
     private string _pokemonTypes;
