updates to news articles and ability to delete and identify user as admin

--- a/DexMasterUI/Pages/PokemonPages/PokemonGrid.razor
+++ b/DexMasterUI/Pages/PokemonPages/PokemonGrid.razor
@@ -1,4 +1,6 @@
-﻿<MudOverlay @bind-Visible="_isLoading" DarkBackground="true" ZIndex="9999">
+﻿@page "/pokemon"
+
+<MudOverlay @bind-Visible="_isLoading" DarkBackground="true" ZIndex="9999">
     <MudProgressCircular Color="Color.Secondary" Indeterminate="true" />
 </MudOverlay>
 
