--- a/DexMasterUI/Shared/MainLayout.razor
+++ b/DexMasterUI/Shared/MainLayout.razor
@@ -22,8 +22,8 @@
     </MudAppBar>
     <MudDrawer Open="true" ClipMode="DrawerClipMode.Always" Elevation="1" Variant="@DrawerVariant.Mini">
         <MudNavMenu Bordered="false">
-            <MudNavLink @onclick="@(() => NavigateTo("PokeDex"))" Icon="@Icons.Material.Filled.NewReleases">
-                PokeDex
+            <MudNavLink @onclick="@(() => NavigateTo("Pokemon"))" Icon="@Icons.Material.Filled.NewReleases">
+                Pokemon
             </MudNavLink>
             <MudNavLink @onclick="@(() => NavigateTo("ItemDex"))" Icon="@Icons.Material.Filled.Star">
                 ItemDex
