--- a/DexMasterUI/_Imports.razor
+++ b/DexMasterUI/_Imports.razor
@@ -5,10 +5,12 @@
 @using DexMasterUI.Components.Admin
 @using DexMasterUI.Components.Display
 @using DexMasterUI.Components.Display.PokemonUI
+@using DexMasterUI.Components.Display.DialogUI
 @using DexMasterUI.Components.Layout
 @using DexMasterUI.Components.Users
 @using DexMasterUI.Pages.PokemonPages
 @using DexMasterUI.Pages.Abilities
+@using DexMasterUI.Pages.News
 @using DexMasterUI.Shared
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
