--- a/DexMasterUI/Pages/News/News.razor
+++ b/DexMasterUI/Pages/News/News.razor
@@ -20,6 +20,7 @@
                         <MudButton Color="Color.Primary" Variant="Variant.Text" OnClick="@(() => ViewDetails(news))">Read More</MudButton>
                         @if (_loggedInUser != null && _loggedInUser.IsAdmin)
                         {
+                            <MudIconButton Icon="@Icons.Material.Filled.Edit" OnClick="@(() => OpenEditDialog(news))" />
                             <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Error" OnClick="@(() => DeleteArticle(news.Id))" />
                         }
                     </MudCardActions>
@@ -82,6 +83,17 @@
         // Refresh the list of articles to include the newly created ones
         _newsArticles = await NewsArticleDataService.GetAllNewsArticlesAsync();
         StateHasChanged(); // Refresh the UI to display the new articles
+    }
+    
+    private void OpenEditDialog(NewsArticle newsArticle)
+    {
+        var parameters = new DialogParameters
+        {
+            ["NewsArticle"] = newsArticle
+        };
+
+        var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Small, FullWidth = true };
+        DialogService.Show<UpdateNewsArticleDialog>("Edit News Article", parameters, options);
     }
     
     private async Task DeleteArticle(string id)
