--- a/DexMasterUI/Pages/PokemonPages/PokemonGrid.razor
+++ b/DexMasterUI/Pages/PokemonPages/PokemonGrid.razor
@@ -23,7 +23,7 @@
             {
                 <MudItem lg="2" md="6" xs="12">
                     <CascadingValue Value="@_loggedInUser">
-                        <PokemonCard Pokemon="@pokemon"/>
+                        <PokemonCard PokemonId="@pokemon.Key" Pokemon="@pokemon.Value"/>
                     </CascadingValue>
                 </MudItem>
             }
@@ -84,7 +84,7 @@
     private const string SavedLimit = "Limit";
 
     private Pokedex _pokedex;
-    private IEnumerable<Pokemon> _pokemon;
+    private Dictionary<int, Pokemon> _pokemon;
     private int _currentPage = 1;
     private int _limit = 12;
     private User _loggedInUser = null;
@@ -110,8 +110,8 @@
         _isLoading = true;
         
         var fetchPokemon = await pokeApiService.FilterPokemonListAsync(_limit, (_currentPage-1) * _limit, _pokedex, SearchTerm);
-        _totalPokemon = fetchPokemon.Item1;
-        _pokemon = fetchPokemon.Item2;
+        _totalPokemon = fetchPokemon.Count;
+        _pokemon = fetchPokemon.pokemonList;
 
         _totalPages = _limit == 0 ? 1 : (int)Math.Ceiling((double)_totalPokemon / _limit);
 
