--- a/DexMasterUI/Pages/News/News.razor
+++ b/DexMasterUI/Pages/News/News.razor
@@ -54,13 +54,56 @@
         navManager.NavigateTo($"/news/{news.Id}");
     }
     
-    private void OpenCreateArticleDialog()
+    private async Task OpenCreateArticleDialog()
     {
-        DialogService.Show<CreateNewsArticleDialog>("Create News Article");
+        IDialogReference dialog = DialogService.Show<CreateNewsArticleDialog>("Create News Article");
+        DialogResult result = await dialog.Result;
         
-        StateHasChanged();
+        if (result.Canceled == false)
+        {
+            _newsArticles = await NewsArticleDataService.GetAllNewsArticlesAsync();
+            StateHasChanged();
+        }
     }
     
+    private async Task OpenEditDialog(NewsArticle newsArticle)
+    {
+        var parameters = new DialogParameters
+        {
+            ["NewsArticle"] = newsArticle
+        };
+
+        var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Small, FullWidth = true };
+        IDialogReference dialog = DialogService.Show<UpdateNewsArticleDialog>("Edit News Article", parameters, options);
+        DialogResult result = await dialog.Result;
+
+        if (result.Canceled == false)
+        {
+            _newsArticles = await NewsArticleDataService.GetAllNewsArticlesAsync();
+            StateHasChanged();
+        }
+    }
+    
+    private async Task DeleteArticle(string id)
+    {
+        DialogOptions options = new() { MaxWidth = MaxWidth.Small };
+        bool? result = await DialogService.ShowMessageBox(
+            "Warning", 
+            "Are you sure you want to delete this article?", 
+            yesText: "Delete", 
+            cancelText: "Cancel", 
+            options:options);
+        
+        if (result == true)
+        {
+            await NewsArticleDataService.DeleteNewsArticleAsync(id);
+            _newsArticles.Remove(_newsArticles.FirstOrDefault(n => n.Id == id));
+            
+            StateHasChanged();
+        }
+    }
+    
+        
     private async Task GenerateTestDataAsync()
     {
         var random = new Random();
@@ -79,39 +122,8 @@
 
             await NewsArticleDataService.CreateNewsArticleAsync(newsArticle);
         }
-
-        // Refresh the list of articles to include the newly created ones
-        _newsArticles = await NewsArticleDataService.GetAllNewsArticlesAsync();
-        StateHasChanged(); // Refresh the UI to display the new articles
-    }
-    
-    private void OpenEditDialog(NewsArticle newsArticle)
-    {
-        var parameters = new DialogParameters
-        {
-            ["NewsArticle"] = newsArticle
-        };
-
-        var options = new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.Small, FullWidth = true };
-        DialogService.Show<UpdateNewsArticleDialog>("Edit News Article", parameters, options);
-    }
-    
-    private async Task DeleteArticle(string id)
-    {
-        DialogOptions options = new() { MaxWidth = MaxWidth.Small };
-        bool? result = await DialogService.ShowMessageBox(
-            "Warning", 
-            "Are you sure you want to delete this article?", 
-            yesText: "Delete", 
-            cancelText: "Cancel", 
-            options:options);
         
-        if (result == true)
-        {
-            await NewsArticleDataService.DeleteNewsArticleAsync(id);
-            _newsArticles.Remove(_newsArticles.FirstOrDefault(n => n.Id == id));
-            
-            StateHasChanged(); // Refresh the UI
-        }
+        _newsArticles = await NewsArticleDataService.GetAllNewsArticlesAsync();
+        StateHasChanged(); 
     }
 }
