--- a/DexMasterUI/Pages/Admin/AltImagePage.razor
+++ b/DexMasterUI/Pages/Admin/AltImagePage.razor
@@ -1,5 +1,5 @@
-﻿@page "/upload-image"
-@attribute [Authorize(Roles = "Admin")]
+﻿@page "/upload-image2"
+@attribute [Authorize(Roles = "nobody")]
 @inject IImageAssetData ImageAssetData
 
 <h3>Upload Image</h3>
