--- a/DexMasterUI/Shared/MainLayout.razor
+++ b/DexMasterUI/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+<PageTitle>DexMaster - The #1 Resource for Pokemon</PageTitle>
+
 <MudThemeProvider @bind-IsDarkMode="@_isDarkMode" Theme="_theme" />
 <MudDialogProvider 
     FullWidth="true"
